--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "dev": "nodemon --watch"
   },
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "handlebars-helpers": "^0.10.0",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.5.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
