--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
