--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.4",
     "morgan": "~1.9.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
