--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^3.5.4",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "stripe": "^8.44.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
