--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "handlebars-helpers": "^0.10.0",
-    "hbs": "^4.1.0",
+    "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.4",
     "morgan": "~1.9.1",
+    "numeral": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "stripe": "^8.44.0"
